= master

* Improve performance when freezing app if certain methods have not been overridden (jeremyevans)

* Support :check_arity and :check_dynamic_arity app options for whether/how to check arity for blocks used to define methods (jeremyevans)

* Improve performance of the status_handler plugin by using methods instead of instance_exec (jeremyevans)

* Remove r.static_route method from the static_routing plugin (jeremyevans)

* Improve performance of the static_routing plugin by using methods instead of instance_exec (jeremyevans)

* Add support for the route_block_args plugin to the route_csrf plugin (jeremyevans)

* Improve performance of the route_csrf plugin by using a method instead of instance_exec (jeremyevans)

* Improve performance of the route_block_args plugin by using a method instead of instance_exec (jeremyevans)

* Improve performance of the path plugin by using methods instead of instance_exec (jeremyevans)

* Improve performance of the named_templates plugin by using methods instead of instance_exec (jeremyevans)

* Improve performance of the multi_route plugin by using methods instead of instance_exec (jeremyevans)

* Improve performance of the hooks plugin by using methods instead of instance_exec (jeremyevans)

* Improve performance of the mail_processor plugin by using methods instead of instance_exec (jeremyevans)

* Improve performance of the default_status plugin by directly defining the default_status method (jeremyevans)

* Improve performance of class_level_routing plugin using methods instead of instance_exec (jeremyevans)

* Do not have route_block_args plugin affect class_level_routes plugin (jeremyevans)

* Integrate internal after hook with error_handler plugin (jeremyevans)

* Improve performance of internal before and after hooks (jeremyevans)

* Improve performance by using method instead of instance_exec for main route block (jeremyevans)
